# ChangeVoice

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/yanchunlan/changevoice/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ChangeVoice.cpp  com_example_yanchunlan_changevoice_VoiceUtil.h
app/src/main/java/com/example/yanchunlan/changevoice/: MainActivity.kt  VoiceUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/yanchunlan/changevoice/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
